# dsci_550_a1

./: .gitignore  ApparitionType.ipynb  Events_type.ipynb  Makefile  README.md  UsingConda.md  environment.yml  pyproject.toml
data/keywords/: 1.06 - dg-haunted_places - event_type  apparition_keywords.txt  audio_keywords.txt  noun_keywords.json  visual_keywords.txt  witness_nouns.json  witness_nouns.rtf  witness_verbs.json
dsci_550_a1/: flightFunctions.py  parsingFunctions.py
notebooks/: 0.01-dg-raw_data-exploration.ipynb  0.02-dg-raw_data-data_cleaning.ipynb  0.03-dg-raw_data-entry_viewer.ipynb  1.01-dg-haunted_places-audio_features.ipynb  1.02-dg-haunted_places-visual_features.ipynb  1.03-dg-haunted_places-date_features.ipynb  1.04-dg-haunted_places-witness_features.ipynb  1.05- dg-haunted_places-apparition_types.ipynb  1.05-dg-haunted-places-apparition_types.ipynb  1.05-dg-haunted_places-apparition_type.ipynb  1.05-dg-haunted_places-apparitiontype.py  1.06-dg-haunted_places-events_type.ipynb  2.01-dg-airports_data-joining.ipynb  3.01-dg-haunted_places-globe_visualization.ipynb  ApparitionType (1).ipynb  dg-haunted_places-apparition_types.ipynb  events_type.ipynb
references/: Data_Cleaning_Edge Cases.rtf  date_edge_cases.rtf  witness_test_cases.rtf
