[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dsci_550_a1"
version = "0.0.1"
description = "Analysis of the Haunted Places Dataset as part of Assignment 1 for DSCI_550 SP_25"
authors = [
  { name = "Daniel Gottschalk, Reha Matai, Serafina Smith, Mikena Moore, Kate Mathew" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["dsci_550_a1"]
force_sort_within_sections = true
